# LatticeBasedMotionPlanner

./: README.md
lattice_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
lattice_planner/include/lattice_planner/: Qstate.h  Qstate_discretizer.h  Qtable.h  cost_manager.h  dijkstra.h  discrete_state.h  environment.h  hasher.h  heap.h  heuristics.h  lattice_primitives.h  list.h  motion_constraints.h  planner.h  planner_ros.h  pose.h  sarsa.h  state.h  state_discretizer.h  timing_info.h  velocity.h
lattice_planner/launch/: simulation.launch  simulation_debug.launch
lattice_planner/launch/move_base/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
lattice_planner/launch/rviz/: simulation.rviz
lattice_planner/maps/env/: env.pgm  env.yaml
lattice_planner/maps/env1/: env1.pgm  env1.world  env1.yaml
lattice_planner/maps/env2/: env2.pgm  env2.world
lattice_planner/maps/env3/: env3.pgm  env3.world
lattice_planner/maps/env4/: env4.pgm  env4.yaml  robots.inc
lattice_planner/maps/env5/: env5.pgm  env5.world  env5.yaml
lattice_planner/maps/env6/: env6.pgm  env6.world  env6.yaml
lattice_planner/maps/env7/: env7.pgm  env7.yaml
lattice_planner/maps/env8/: env8.pgm  env8.world  env8.yaml
lattice_planner/maps/env9/: env9.pgm  env9.pgm~  env9.world  env9.yaml
lattice_planner/maps/grid/: grid.world  grid.yaml  robots.inc
lattice_planner/maps/passage/: env7.pgm  env7.world  passage.pgm  passage.world  passage.yaml
lattice_planner/maps/uturn/: robots.inc
lattice_planner/src/: .Qtable.cpp.swp  Qstate_discretizer.cpp  Qtable.cpp  cost_manager.cpp  dijkstra.cpp  environment.cpp  heap.cpp  heuristics.cpp  lattice_primitives.cpp  planner.cpp  planner.cpp~  planner_ros.cpp  state_discretizer.cpp  timing_info.cpp  ~planner.cpp  ~planner.cpp~
pose_follower/: CMakeLists.txt  local_planner_plugin.xml  package.xml
pose_follower/include/pose_follower/: path_follower.h~  pose_follower.h
pose_follower/src/: path_follower.cpp~  path_follower.cpp~~  pose_follower.cpp
prim_gen/: prim_gen.py  prim_gen.py~  prim_gen_long.py  prim_gen_plus.py  prim_gen_rot_in_place.py  prim_gen_too_fast.py  unicycle_2p5cm.mprim  (+1 more)
test/: main  (+4 more)
timed_path_follower/: CMakeLists.txt  package.xml
timed_path_follower/cfg/: PathFollower.cfg
timed_path_follower/include/timed_path_follower/: path_follower.h
timed_path_follower/src/: .path_follower.cpp.swp  path_follower.cpp
(+47 files in other folders)
